gateway_api_manifests/route_argocd.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-to-argocd
  namespace: argocd
spec:
  parentRefs:
    - name: production
      namespace: gateway-api
      sectionName: https
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - name: argocd-server
        port: 443
