gateway_api_manifests/route_hubble.yaml
# https://gateway-api.sigs.k8s.io/api-types/httproute/
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-to-hubble-ui
  namespace: kube-system
spec:
  parentRefs:
    - name: production
      namespace: gateway-api
      sectionName: http
  hostnames:
    - hubble-ui.production.home.hunt.internal
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hubble-ui
          port: 80
