gateway_api_manifests/route_traefik.yaml
# https://gateway-api.sigs.k8s.io/api-types/httproute/
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-to-traefik
  namespace: traefik
spec:
  parentRefs:
    - name: production
      namespace: gateway-api
      sectionName: https
  hostnames:
    - traefik.production.home.hunt.internal
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: traefik
          port: 443
